--- a/test/s52webUI/s52ui.css
+++ b/test/s52webUI/s52ui.css
@@ -4,8 +4,8 @@ body {
   font-weight : normal;
   line-height : 1.2em;
   margin      : 15px;
-  //background-color : transparent;
-  background-color : rgba(0,0,0,0);
+  background-color : transparent;
+  //background-color : rgba(0,0,0,0.5);
   //opacity  :.40;
 }
 input {
