--- a/test/s52ui/web/s52ui.css
+++ b/test/s52ui/web/s52ui.css
@@ -1,12 +1,10 @@
 body {
   font-family : 'Open Sans', sans-serif;
-  font-size   : 14px;
+  font-size   : 12pt;
   font-weight : normal;
   line-height : 1.2em;
   margin      : 15px;
   background-color : transparent;
-  //background-color : rgba(0,0,0,0.5);
-  //opacity  :.40;
 }
 input {
   position: absolute;
