--- a/test/s52ui/web/s52ui.css
+++ b/test/s52ui/web/s52ui.css
@@ -1,28 +1,32 @@
 body {
-  font-family : 'Open Sans', sans-serif;
-  font-size   : 12pt;
-  font-weight : normal;
-  line-height : 1.2em;
-  margin      : 15px;
+  font-family      : 'Open Sans', sans-serif;
+  font-size        : 12pt;
+  font-weight      : normal;
+  line-height      : 1.2em;
+  margin           : 15px;
   background-color : transparent;
+  display          : inline; 
+  //display: none;
+  //width  : 100%;
+  //height : 100%;
 }
 input {
-  position: absolute;
-  left:90%;
+  position         : absolute;
+  left             : 90%;
 }
 hr {
-  width  : 90%;
-  height : 1px;
-  border : 0px;
+  width            : 90%;
+  height           : 1px;
+  border           : 0px;
   background-color : blue;
 }
 h3>hr {
-  width  : 100%;
-  height : 3px;
-  border : 0px;
+  width            : 100%;
+  height           : 3px;
+  border           : 0px;
 }
 label {
-  font-size  : 14pt;
+  font-size        : 14pt;
 }
 article {
   width            : 100%;
@@ -35,6 +39,9 @@ span {
   height           : 100%;
   position         : relative;
   background-color : transparent;
+}
+ul {
+  display          : none;
 }
 #td_buttonCell
 {
@@ -65,3 +72,7 @@ div {
   float:right;
   background-color:rgba(200,0,0,0.5);
 }
+#svg1 {
+  display         : none;
+}
+
