--- a/test/s52ui/web/s52ui.css
+++ b/test/s52ui/web/s52ui.css
@@ -5,17 +5,39 @@ body {
   line-height      : 1.2em;
   margin           : 15px;
   background-color : transparent;
-  display          : inline; 
-  //display: none;
-  //width  : 100%;
-  //height : 100%;
+}
+table {
+  width            : 50%;
+}
+tbody {
+  width            : 100%;
+  position         : relative;
+}
+tr {
+  width            : 100%;
+}
+td {
+  width            : 100%;
+  position         : relative;
+}
+article {
+  background-color : transparent;
 }
 input {
-  position         : absolute;
+  position         : relative;
   left             : 90%;
+  //right            : 90%;
+  background-color : transparent;
+}
+span {
+  width            : 100%;
+  background-color : transparent;
+}
+h3 {
+  width            : 100%;
 }
 hr {
-  width            : 90%;
+  width            : 100%;
   height           : 1px;
   border           : 0px;
   background-color : blue;
@@ -28,21 +50,10 @@ h3>hr {
 label {
   font-size        : 14pt;
 }
-article {
-  width            : 100%;
-  position         : relative;
-  text-indent      : 5%;
-  background-color : transparent;
-}
-span {
-  width            : 100%;
-  height           : 100%;
-  position         : relative;
-  background-color : transparent;
-}
 ul {
   display          : none;
 }
+
 #td_buttonCell
 {
   text-indent      : 5%;
@@ -55,13 +66,6 @@ ul {
   to   {background-color:transparent;}
 }
 
-div {
-  width            : 100%;
-  position         : relative;
-  border           : 3px solid #f00;
-  background-color : transparent;
-}
-
 .scrollTableL
 {
   float:left;
@@ -72,6 +76,7 @@ div {
   float:right;
   background-color:rgba(200,0,0,0.5);
 }
+
 #svg1 {
   display         : none;
 }
