--- a/test/s52ui/web/s52ui.css
+++ b/test/s52ui/web/s52ui.css
@@ -1,54 +1,43 @@
 body {
   font-family      : 'Open Sans', sans-serif;
-  font-size        : 12pt;
+  font-size        : 18pt;
   font-weight      : normal;
   line-height      : 1.2em;
-  margin           : 15px;
+  margin           : 0px;
   background-color : transparent;
 }
 table {
-  width            : 50%;
+  width            : 30%;
+  position         : relative;
+  //display          : none;
 }
 tbody {
-  width            : 100%;
-  position         : relative;
+  width            : 100%;    // need 100% otherwise the width of the table element will kick in
 }
 tr {
-  width            : 100%;
 }
 td {
-  width            : 100%;
-  position         : relative;
-}
-article {
-  background-color : transparent;
 }
 input {
-  position         : relative;
-  left             : 90%;
-  //right            : 90%;
-  background-color : transparent;
+  float            : right;
 }
 span {
-  width            : 100%;
   background-color : transparent;
 }
 h3 {
-  width            : 100%;
+  text-align       : left;
 }
 hr {
-  width            : 100%;
   height           : 1px;
   border           : 0px;
   background-color : blue;
 }
 h3>hr {
-  width            : 100%;
   height           : 3px;
   border           : 0px;
 }
 label {
-  font-size        : 14pt;
+  font-size        : 18pt;
 }
 ul {
   display          : none;
@@ -78,6 +67,16 @@ ul {
 }
 
 #svg1 {
+  font-family      : 'Open Sans', sans-serif;
+  font-size        : 40pt;
+  font-weight      : bold;
+  //line-height      : 1.2em;
+  //margin           : 0px;
+  //background-color : transparent;
   display         : none;
+  //display         : inline-block;
+  width           : 100%;
+  height          : 100%;
+  //version         : 1.1;
 }
 
