add device rotation handling

--- a/test/s52ui/web/s52ui.css
+++ b/test/s52ui/web/s52ui.css
@@ -79,4 +79,9 @@ ul {
   height          : 100%;
   //version         : 1.1;
 }
+#svg1text {
+  //background-color : blue;
+  //stroke : blue;
+  //fill   : red;
+}
 
