--- a/test/s52ui/web/s52ui.css
+++ b/test/s52ui/web/s52ui.css
@@ -11,8 +11,8 @@ table {
   width            : 30%;
   position         : relative;
   border           : 0;
-  cellpadding      : 0;
-  cellspacing      : 0;
+  /* cellpadding      : 0; */
+  /* cellspacing      : 0; */
 }
 tbody {
   width            : 100%;
